# qorx

./: .gitignore  .zenodo.json  CITATION.cff  Cargo.toml  Dockerfile  README.md  flake.nix
.github/workflows/: build-windows.yml  daily-community-proof.yml  package-channels.yml  publish-registries.yml  release-platforms.yml  testsprite-enterprise.yml
cloudflare/: community-metrics-worker.mjs  wrangler.community-metrics.toml
docs/: AYIE_STARTER.md  COMMANDS.md  COMMUNITY.md  DISTRIBUTION.md  EDGE_STARTER.md  INDEPENDENT_REVIEW.md  INSTALL.md  LIVE_METRICS.md  MEDIA.md  METRICS.md  PERFORMANCE.md  PRODUCTION.md  QORX.md  QORX_1_0_4_RUST.md  REAL_WORLD_TESTS.md  REFERENCE_PAPERS.md  REGISTRY_AUTOMATION.md  SAFE-R.md  SCIENCE_AND_MATH.md  SERVER.md  TECHNICAL_CREDIBILITY.md  TESTSPRITE.md  index.md
docs/benchmarks/: README.md  live.json  live.md
docs/handbook/: README.md  language.md  protocol.md  runtime.md  science.md
docs/papers/: qorx-ai-language-paper.md  (+2 more)
packaging/: README.md
packaging/pypi/: README.md  pyproject.toml
packaging/pypi/qorx_cli/: __init__.py  __main__.py  launcher.py
scripts/: check-package-channels.ps1  check-release-size.ps1  check-technical-credibility.ps1  check-testsprite-enterprise.ps1  run-benchmark.py  run-testsprite-smoke.py
src/: adapters.rs  capsule.rs  config.rs  main.rs  security.rs
tests/: capsule.rs  community_metrics_worker.test.mjs
testsprite_tests/: TC001_Community_homepage_shows_Qorx_1.0.4.py  TC001_Community_homepage_shows_Qorx_1.0.4a.py  TC002_Community_docs_expose_edition_and_TestSprite_QA_links.py
(+13 files in other folders)
