[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qorx"
version = "1.0.4a0"
description = "Qorx Community Edition CLI installer wrapper."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "AGPL-3.0-only" }
authors = [
  { name = "Marvin Sarreal Villanueva", email = "marvin@orin.work" }
]
keywords = ["qorx", "ai", "context", "cli"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "License :: OSI Approved :: GNU Affero General Public License v3",
  "Programming Language :: Python :: 3",
  "Topic :: Software Development"
]

[project.urls]
Homepage = "https://github.com/bbrainfuckk/qorx"
Repository = "https://github.com/bbrainfuckk/qorx"
Documentation = "https://bbrainfuckk.github.io/qorx/"

[project.scripts]
qorx = "qorx_cli.launcher:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["qorx_cli*"]
